--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
+  meta: ^1.10.0
 
 dev_dependencies:
   hive_generator: ^2.0.1
