--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   bloc: ^8.1.4
   meta: ^1.10.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   hive_generator: ^2.0.1
