--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bloc: ^8.1.4
   meta: ^1.10.0
   modal_progress_hud_nsn: ^0.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   hive_generator: ^2.0.1
